more rest endpoint and test
